CHATS_SIT/force-app/main/default/objects/batchdev_t_fiscal_rate__x.object
<CustomObject>
    <description>batchdev$t_fiscal_rate</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchdev$t_fiscal_rate</externalName>
    <fields>
        <fullName>amt_cty__c</fullName>
        <description>amt_cty</description>
        <externalDeveloperName>amt_cty</externalDeveloperName>
        <label>County Ceiling Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_fa__c</fullName>
        <description>amt_fa</description>
        <externalDeveloperName>amt_fa</externalDeveloperName>
        <label>Fiscal Agreement Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_provr__c</fullName>
        <description>amt_provr</description>
        <externalDeveloperName>amt_provr</externalDeveloperName>
        <label>Provider Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_age_group__c</fullName>
        <description>cde_age_group</description>
        <externalDeveloperName>cde_age_group</externalDeveloperName>
        <label>Age Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_care_unit__c</fullName>
        <description>cde_care_unit</description>
        <externalDeveloperName>cde_care_unit</externalDeveloperName>
        <label>Care Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_rate_type__c</fullName>
        <description>cde_rate_type</description>
        <externalDeveloperName>cde_rate_type</externalDeveloperName>
        <label>Rate Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>createdbyid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>createddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_fiscal_rate__c</fullName>
        <description>idn_fiscal_rate</description>
        <externalDeveloperName>idn_fiscal_rate</externalDeveloperName>
        <label>idn_fiscal_rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_fiscal_sch__c</fullName>
        <description>idn_fiscal_sch</description>
        <externalDeveloperName>idn_fiscal_sch</externalDeveloperName>
        <label>idn_fiscal_sch</label>
        <length>18</length>
        <referenceTargetField>T_FISCAL_SCH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_FISCAL_SCH__c</referenceTo>
        <relationshipLabel>batchdev$t_fiscal_rate</relationshipLabel>
        <relationshipName>batchdev_t_fiscal_rate</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>lastmodifiedbyid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>lastmodifieddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rate_schedule__c</fullName>
        <description>rate_schedule</description>
        <externalDeveloperName>rate_schedule</externalDeveloperName>
        <label>rate_schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>batchdev$t_fiscal_rate</label>
    <pluralLabel>batchdev$t_fiscal_rate</pluralLabel>
</CustomObject>